--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="profile">
             <img src="/images/my.png" alt="Profile-picture">
             <h2>Hello.</h2>
-            <p class="intro">I am a Pre-Final year student.Currently I'm learning Full Stack Web Development.</p>
+            <p class="intro">I am a Final year student. Creating and deploying websites is what I do .</p>
         </div>
         <hr>
         <div class="skills">
